@@ -33,7 +33,7 @@ using namespace std;
        namespace Sgi { using ::hash_map; }; // inherit globals
 #   else
 #      include <ext/hash_map>
-#      if __GNUC_MINOR__ == 0
+#      if __GNUC__ == 3 && __GNUC_MINOR__ == 0
           namespace Sgi = std;               // GCC 3.0
 #      else
           namespace Sgi = ::__gnu_cxx;       // GCC 3.1 and later
