@@ -7,5 +7,5 @@ Name: libqalculate
 Description: libqalculate
 Requires: glib-2.0 libxml-2.0
 Version: @VERSION@
-Libs: -L${libdir} @CLN_LIBS@ -lpthread
+Libs: -L${libdir} @CLN_LIBS@ -lpthread -lqalculate
 Cflags: -I${includedir} @CLN_CPPFLAGS@
